# bluerov2_gazebo

./: CMakeLists.txt  package.xml
models/bluerov2/: model.sdf
models/bluerov2_2025_port_9002/: model.sdf
models/bluerov2_2025_port_9012/: model.sdf
worlds/: bluerov2_1x.world  bluerov2_2x.world  bluerov2_simulation_1x.world  bluerov2_simulation_2x.world
