<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>bluerov2_gazebo</name>
  <version>0.0.1</version>
  <description>BlueROV2 simulation in Gazebo Harmonic.</description>

  <maintainer email="marinarasauced@outlook.com">Marina Nelson</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/marinarasauced/bluerov2_gazebo</url>
  <url type="bugtracker">https://github.com/marinarasauced/bluerov2_gazebo/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
